--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,21 @@
-body {
+.home{
+  content: "";
+  background: url('./crud.jpeg') no-repeat center center/cover;
+  position: absolute;
+  top: 50px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+  body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  text-shadow: 1cap;
+  font-size: 30px;
+  background: rgb(176, 168, 168);
+  text-align : center;
+  font-family: 'Nova Round', cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
